# cpp-poker

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: CMakeLists.txt  Card.cpp  Card.h  Dealer.cpp  Dealer.h  Deck.cpp  Deck.h  Evaluator.cpp  Evaluator.h  Game.cpp  Game.h  Hand.cpp  Hand.h  main.cpp
tests/: CMakeLists.txt  DeckTest.cpp
